--- a/assets/styles/components/_button.scss
+++ b/assets/styles/components/_button.scss
@@ -1,6 +1,6 @@
 a {
     color: $color--black;
-    padding: $spacing 0;
+    padding: calc($spacing / 2) 0;
     margin-top: $spacing; 
     text-decoration: underline;
     transition: all 300ms ease;
