--- a/assets/styles/base/_base.scss
+++ b/assets/styles/base/_base.scss
@@ -4,16 +4,13 @@
 
 html,
 body {
+    background-color: $color--white;
+    color: $color--black;
+    font-family: 'Poppins', monospace, sans-serif;
     max-width: 100%;
     width: 100%;
     overflow-x: hidden;
     margin: 0;
-}
-
-body {
-    background-color: $color--white;
-    color: $color--black;
-    font-family: 'Poppins', monospace, sans-serif;
 }
 
 .container {
@@ -100,6 +97,7 @@ body {
 }
 
 .dark-mode {
+    html,
     body {
       background-color: $color--background-dm;
       color: $color--white;
