--- a/assets/styles/base/_typography.scss
+++ b/assets/styles/base/_typography.scss
@@ -11,7 +11,7 @@ h1 {
     margin: $space-lg 0 0;
     font-size: 2.5rem;
 
-    @media screen and (min-width: $breakpoint--sm) {
+    @media screen and (min-width: $breakpoint--md) {
       font-size: 4.688rem;
     }
 }
@@ -20,7 +20,7 @@ h2 {
     font-size: 2rem;
     margin: $space-xxl 0 $space-lg;
 
-    @media screen and (min-width: $breakpoint--sm) {
+    @media screen and (min-width: $breakpoint--md) {
       font-size: 3.75rem;
     }
 }
@@ -30,7 +30,7 @@ h3 {
     text-transform: capitalize;
     margin: $space-lg 0 $space-sm;
 
-    @media screen and (min-width: $breakpoint--sm) {
+    @media screen and (min-width: $breakpoint--md) {
       font-size: 2rem;
     }
 }
@@ -40,7 +40,7 @@ h4 {
     text-transform: capitalize;
     margin: $space-lg 0 $space-sm;
 
-    @media screen and (min-width: $breakpoint--sm) {
+    @media screen and (min-width: $breakpoint--md) {
       font-size: 1.125;
     }
 }
@@ -61,7 +61,7 @@ h4 {
             height: 5px;
             width: 100%;
             
-            @media screen and (min-width: $breakpoint--sm) {
+            @media screen and (min-width: $breakpoint--md) {
                 height: 7px;
             }
         }
