--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,5 +1,5 @@
-@import 'abstracts/fonts';
-@import 'abstracts/variables';
-@import 'base/typography';
-@import 'base/base';
-@import 'components/button';
+@import "abstracts/fonts";
+@import "abstracts/variables";
+@import "base/typography";
+@import "base/base";
+@import "components/button";
