--- a/assets/styles/abstracts/_fonts.scss
+++ b/assets/styles/abstracts/_fonts.scss
@@ -1,15 +1,14 @@
 @font-face {
-    font-family: 'Poppins';
-    src: url('./../fonts/Poppins-Regular.ttf') format('truetype');
+  font-family: "Poppins";
+  src: url("./../fonts/Poppins-Regular.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'Poppins-SemiBold';
-    src: url('./../fonts/Poppins-SemiBold.ttf') format('truetype');
+  font-family: "Poppins-SemiBold";
+  src: url("./../fonts/Poppins-SemiBold.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'Poppins-Black';
-    src: url('./../fonts/Poppins-Black.ttf') format('truetype');
+  font-family: "Poppins-Black";
+  src: url("./../fonts/Poppins-Black.ttf") format("truetype");
 }
-
