--- a/assets/styles/base/_typography.scss
+++ b/assets/styles/base/_typography.scss
@@ -2,85 +2,85 @@ h1,
 h2,
 h3,
 h4 {
-    font-family: 'Poppins-Black', monospace, sans-serif;
-    line-height: 1;
-    text-transform: uppercase;
+  font-family: "Poppins-Black", monospace, sans-serif;
+  line-height: 1;
+  text-transform: uppercase;
 }
 
 h1 {
-    margin: $space-lg 0 0;
-    font-size: 2.5rem;
+  margin: $space-lg 0 0;
+  font-size: 2.5rem;
 
-    @media screen and (min-width: $breakpoint--md) {
-      font-size: 4.688rem;
-    }
+  @media screen and (min-width: $breakpoint--md) {
+    font-size: 4.688rem;
+  }
 }
 
 h2 {
-    font-size: 2rem;
-    margin: $space-xxl 0 $space-lg;
+  font-size: 2rem;
+  margin: $space-xxl 0 $space-lg;
 
-    @media screen and (min-width: $breakpoint--md) {
-      font-size: 3.75rem;
-    }
+  @media screen and (min-width: $breakpoint--md) {
+    font-size: 3.75rem;
+  }
 }
 
 h3 {
-    font-size: 1.25rem;
-    text-transform: capitalize;
-    margin: $space-lg 0 $space-sm;
+  font-size: 1.25rem;
+  text-transform: capitalize;
+  margin: $space-lg 0 $space-sm;
 
-    @media screen and (min-width: $breakpoint--md) {
-      font-size: 2rem;
-    }
+  @media screen and (min-width: $breakpoint--md) {
+    font-size: 2rem;
+  }
 }
 
 h4 {
-    font-size: 1rem;
-    text-transform: capitalize;
-    margin: $space-lg 0 $space-sm;
+  font-size: 1rem;
+  text-transform: capitalize;
+  margin: $space-lg 0 $space-sm;
 
-    @media screen and (min-width: $breakpoint--md) {
-      font-size: 1.125;
-    }
+  @media screen and (min-width: $breakpoint--md) {
+    font-size: 1.125;
+  }
 }
 
 .headline {
-    &--has-separator {
-        position: relative;
-        display: inline-block;
-        margin-top: 0;
-        margin-bottom: $space-xxl;
-    
-        &::after {
-            background: $color--gradient;
-            content: '';
-            position: absolute;
-            left: 0;
-            bottom: -$space-lg;
-            height: 5px;
-            width: 100%;
-            
-            @media screen and (min-width: $breakpoint--md) {
-                height: 7px;
-            }
-        }
-    }
+  &--has-separator {
+    position: relative;
+    display: inline-block;
+    margin-top: 0;
+    margin-bottom: $space-xxl;
 
-    &--has-outline {
-        -webkit-text-fill-color: $color--background-lm;
-        -webkit-text-stroke-width: 1px;
-        -webkit-text-stroke-color: $color--dark;
+    &::after {
+      background: $color--gradient;
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: -$space-lg;
+      height: 5px;
+      width: 100%;
+
+      @media screen and (min-width: $breakpoint--md) {
+        height: 7px;
+      }
     }
+  }
+
+  &--has-outline {
+    -webkit-text-fill-color: $color--background-lm;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: $color--dark;
+  }
 }
 
-.dark-mode {  
-    .headline--has-outline {
-      -webkit-text-fill-color: $color--background-dm;
-      -webkit-text-stroke-color: $color--light;
-    }
+.dark-mode {
+  .headline--has-outline {
+    -webkit-text-fill-color: $color--background-dm;
+    -webkit-text-stroke-color: $color--light;
+  }
 }
 
 p {
-    margin: 0 0 $space-lg;
+  margin: 0 0 $space-lg;
 }
