perf: optimize for lighthouse report and accessibility

--- a/assets/styles/abstracts/_fonts.scss
+++ b/assets/styles/abstracts/_fonts.scss
@@ -1,14 +1,17 @@
 @font-face {
   font-family: "Poppins";
   src: url("./../fonts/Poppins-Regular.ttf") format("truetype");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Poppins-SemiBold";
   src: url("./../fonts/Poppins-SemiBold.ttf") format("truetype");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Poppins-Black";
   src: url("./../fonts/Poppins-Black.ttf") format("truetype");
+  font-display: swap;
 }
