refactor: optimize for lighthouse report - meta tags, icons

--- a/assets/styles/abstracts/_variables.scss
+++ b/assets/styles/abstracts/_variables.scss
@@ -4,7 +4,7 @@ $color--dark: #111111;
 $color--silver: #ebebeb;
 $color--background-dm: #1a1a1a;
 $color--background-lm: $color--light;
-$color--primary: #d32C4f;
+$color--primary: #d32c4f;
 $color--secondary: #c5caff;
 $color--gradient: linear-gradient(0.25turn, $color--primary, $color--secondary);
 
