add swiper for skills

--- a/assets/styles/base/_typography.scss
+++ b/assets/styles/base/_typography.scss
@@ -27,7 +27,7 @@ h2 {
 
 h3 {
   font-size: 1.25rem;
-  text-transform: capitalize;
+  font-family: 'Poppins-SemiBold', monospace, sans-serif;
   margin: $space-lg 0 $space-sm;
 
   @media screen and (min-width: $breakpoint--md) {
