--- a/assets/styles/abstracts/_variables.scss
+++ b/assets/styles/abstracts/_variables.scss
@@ -1,12 +1,15 @@
 /* colors */
 $color--light: #f5f5f5;
 $color--dark: #111111;
+$color--grey: #383838;
 $color--silver: #ebebeb;
 $color--background-dm: #1a1a1a;
 $color--background-lm: $color--light;
 $color--primary: #d32c4f;
 $color--secondary: #c5caff;
+
 $color--gradient: linear-gradient(0.25turn, $color--primary, $color--secondary);
+$color--gradient-10: linear-gradient(0.4turn, rgba($color--primary, 0.1), rgba($color--secondary, 0.1));
 
 /* breakpoints */
 $breakpoint--sm: 640px;
@@ -27,3 +30,8 @@ $space-xxl: calc($space-unit * 4);
 
 /* transitions */
 $transition--normal: all 300ms ease;
+
+/* gradient */
+@mixin gradient($value) {
+    border-image: linear-gradient($value, $color--primary, $color--primary, $color--secondary) 1;
+}
