--- a/assets/styles/abstracts/_fonts.scss
+++ b/assets/styles/abstracts/_fonts.scss
@@ -11,6 +11,12 @@
 }
 
 @font-face {
+  font-family: "Poppins-Bold";
+  src: url("./../fonts/Poppins-Bold.ttf") format("truetype");
+  font-display: swap;
+}
+
+@font-face {
   font-family: "Poppins-Black";
   src: url("./../fonts/Poppins-Black.ttf") format("truetype");
   font-display: swap;
