--- a/assets/styles/components/_button.scss
+++ b/assets/styles/components/_button.scss
@@ -65,7 +65,7 @@ a {
     border-radius: 0;
     color: $color--dark;
     display: inline-block;
-    font-family: 'Poppins-Bold', monospace, sans-serif;
+    font-family: "Poppins-Bold", monospace, sans-serif;
 
     &:hover,
     &.is--active {
