--- a/assets/styles/base/_typography.scss
+++ b/assets/styles/base/_typography.scss
@@ -27,7 +27,7 @@ h2 {
 
 h3 {
   font-size: 1.25rem;
-  font-family: 'Poppins-SemiBold', monospace, sans-serif;
+  font-family: "Poppins-SemiBold", monospace, sans-serif;
   margin: $space-lg 0 $space-sm;
 
   @media screen and (min-width: $breakpoint--md) {
@@ -37,8 +37,8 @@ h3 {
 
 h4 {
   font-size: 1rem;
-  font-family: 'Poppins-SemiBold', monospace, sans-serif;
-  text-transform: capitalize;
+  font-family: "Poppins-SemiBold", monospace, sans-serif;
+  text-transform: none;
   margin: $space-lg 0 $space-sm;
 
   @media screen and (min-width: $breakpoint--md) {
@@ -48,7 +48,7 @@ h4 {
 
 .headline {
   margin-bottom: $space-xxl;
-  
+
   &--has-separator {
     position: relative;
     display: inline-block;
@@ -70,7 +70,6 @@ h4 {
   }
 
   &--has-outline {
-    // -webkit-text-fill-color: $color--background-lm;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: $color--dark;
@@ -79,7 +78,6 @@ h4 {
 
 .dark-mode {
   .headline--has-outline {
-    // -webkit-text-fill-color: $color--background-dm;
     -webkit-text-stroke-color: $color--light;
   }
 }
